--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.468.0"
+"devDependencies": {
+  "autoprefixer": "^10.4.17",
+  "postcss": "^8.4.49",
+  "tailwindcss": "^3.4.10",
+  "vite": "^5.4.0",
+  "@vitejs/plugin-react": "^4.3.1"
   },
+  "@vitejs/plugin-react": "^4.3.1"
   "devDependencies": {
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.49",
